# gmrtetc

./: .gitignore  LICENSE  justfile  pyproject.toml  setup.cfg
docs/source/: quickstart.ipynb
src/gmrtetc/: core.py
