[metadata]
name =  gmrtetc
license = MIT License
license_file = LICENSE
author = "Ujjwal Panda"
author_email = "ujjwalpanda97@gmail.com"
long_description_content_type = text/markdown
description = "The GMRT Exposure Time Calculator"
long_description = file: README.md, CHANGELOG.md, CONTRIBUTING.md

project_urls =
    Home Page = https://github.com/astrogewgaw/gmrtetc
    Source Code = https://github.com/astrogewgaw/gmrtetc
    Documentation = https://github.com/astrogewgaw/gmrtetc
    Bug Reports = https://github.com/astrogewgaw/gmrtetc/issues

classifiers =
    Operating System :: Unix
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
package_dir = =src
use_scm_version = True
python_requires = >=3.8
include_package_data = True
setup_requires = setuptools_scm[toml]>=6.0

install_requires =
  numpy
  scipy
  pandas
  astropy

[options.packages.find]
where=src
